Prevent double scroll in the string list

--- a/translate/src/App.css
+++ b/translate/src/App.css
@@ -47,6 +47,7 @@
 
   #app > .main-content.entities-list > .panel-content {
     width: 0%;
+    overflow: hidden;
   }
 
   #app > .main-content > .panel-list {
